# levitatio

week-01/day-3/: f1.txt  f3.txt  f4.txt  f5.txt
week-01/day-3/subtr/: CMakeLists.txt  main.cpp
week-01/day-4/draw_chess_table/: main.cpp
week-01/day-4/draw_diagonal/: main.cpp
week-01/day-4/draw_square/: main.cpp
week-01/day-4/guess_the_number/: main.cpp
week-01/day-4/parametric_average/: main.cpp
week-01/day-5/Doubling/: main.cpp
week-01/day-5/anagram/: main.cpp
week-01/day-5/append_a/: main.cpp
week-01/day-5/append_a_func/: main.cpp
week-01/day-5/change_elements/: CMakeLists.txt  main.cpp
week-01/day-5/colors/: main.cpp
week-01/day-5/compare_length/: main.cpp
week-01/day-5/diagonal-matrix/: main.cpp
week-01/day-5/double_items/: main.cpp
week-01/day-5/factorio/: main.cpp
week-01/day-5/greet/: main.cpp
week-01/day-5/increment_element/: main.cpp
week-01/day-5/palindrome_builder/: main.cpp
week-01/day-5/palindrome_searching/: CMakeLists.txt  main.cpp
week-01/day-5/print_all/: main.cpp
week-02/day-3/drawingsetup/: CMakeLists.txt  center_box_function.cpp  centered_square.cpp  checkerboard.cpp  colored_box.cpp  connect_the_dots.cpp  diagonals.cpp  draw.cpp  four_rectangles.cpp  function_to_center.cpp  go_to_center.cpp  horizontal_lines.cpp  line_in_the_middle.cpp  main.cpp  position_square.cpp  rainbow_box_function.cpp  starry_night.cpp
week-02/day-4/projects/: CMakeLists.txt  envelope_star.cpp  hexagon.cpp  line_play.cpp  repeat_line_play.cpp  triangles.cpp
week-03/divided__by_zero/: CMakeLists.txt  main.cpp
(+191 files in other folders)
